--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: android
-
-before_install:
- - chmod +x gradlew
  
 android:
   components:
@@ -23,6 +20,10 @@ android:
     - extra-android-m2repository
     - addon-google_apis-google-26
 
+
+script:
+- chmod +x ./gradlew
+ 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-26
