--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mert.becomealegend">
+    package="projects.etrkk5.employeer">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/employeericon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/employeericon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -39,6 +42,17 @@
         <activity
             android:name=".EditCompanyActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".SkillsActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".SearchActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".CompanyPostAdActivity" />
+        <activity android:name=".CompanyMessagesActivity" />
+        <activity android:name=".ProfileActivityForEmployee" />
+        <activity android:name=".ProfileActivityForCompany" />
+        <activity android:name=".EmployeeGetAdActivity"></activity>
     </application>
 
 </manifest>
